<?xml version="1.0"?>
<package format="2">
  <name>romea_cmd_mux</name>
  <version>3.0.0</version>
  <description>
      Command multiplexer, which multiplex several twist and four_wheel_steering commands (topics)
      and allows to priorize or disable them (locks).
  </description>

  <maintainer email="vincent.rousseau@irstea.fr">Vincent Rousseau</maintainer>

  <author email="vincent.rousseau@irstea.fr">Vincent Rousseau</author>
  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
  <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>four_wheel_steering_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>romea_cmd_mux_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
