<?xml version="1.0"?>
<package format="2">
  <name>romea_cmd_mux</name>
  <version>3.0.0</version>
  <description>
      Command multiplexer, which multiplex several twist and four_wheel_steering commands (topics)
      and allows to priorize or disable them (locks).
  </description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>
  <author email="jean.laneurit@inrae.fr">Jean Laneurit</author>

  <license>CC BY-NC-SA 4.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>nodelet</depend>
  <depend>topic_tools</depend>
  <depend>diagnostic_updater</depend>
  <depend>romea_cmd_mux_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>

</package>
